# grayscaleImage-sfml

./: CMakeLists.txt  README.md  main.cpp
